# python_typing

./: Makefile  demo.py  pyproject.toml
src/python_typing/: Dog.py  __init__.py  mathemagic.py
stubs/python_typing/: Dog.pyi  __init__.pyi  mathemagic.pyi
tests/: test_python_typing.py
